Thu Dec 19, 2013 || supercharger added: St. Anton, Austria
Wed Dec 18, 2013 || supercharger live: Mitchell, SD
Mon Dec 16, 2013 || supercharger added: St Augustine, FL
Mon Dec 16, 2013 || supercharger added: Santee, SC
Sat Dec 14, 2013 || supercharger added: Hagerstown, MD
Fri Dec 13, 2013 || supercharger added: Highland Park, IL
Fri Dec 13, 2013 || supercharger added: Kingman, AZ
Thu Dec 12, 2013 || supercharger added: Bad Rappenau, Germany
Thu Dec 12, 2013 || supercharger added: Gallup, NM
Wed Dec 11, 2013 || supercharger added: Flagstaff, AZ
Wed Dec 11, 2013 || supercharger live: Worthington, MN
Mon Dec 9, 2013 || supercharger live: Angola, IN
Mon Dec 9, 2013 || supercharger live: Mauston, WI
Mon Dec 9, 2013 || supercharger added: Angola, IN
Sun Dec 8, 2013 || supercharger added: Autohof Aichstetten, Germany
Sun Dec 8, 2013 || supercharger added: Estavayer-le-Lac, Switzerland
Sun Dec 8, 2013 || supercharger added: Onalaska, WI
Sat Dec 7, 2013 || supercharger added: Grand Junction, CO
Sat Dec 7, 2013 || supercharger added: Macedonia, OH
Fri Dec 6, 2013 || supercharger added: Savannah, GA
Thu Dec 5, 2013 || supercharger added: Greenwich, CT (south)
Wed Dec 4, 2013 || supercharger added: San Juan Capistrano, CA
Tue Dec 3, 2013 || supercharger added: Blanding, UT
Tue Dec 3, 2013 || supercharger added: Wilnsdorf, Germany
Mon Dec 2, 2013 || supercharger added: Lusk, WY
Sun Dec 1, 2013 || supercharger added: Zevenaar, Netherlands
Fri Nov 29, 2013 || supercharger added: Lumberton, NC
Wed Nov 27, 2013 || supercharger added: Cheyenne, WY (removed Gila Bend, AZ)
Tue Nov 26, 2013 || supercharger added: St. Joseph, MI
Mon Nov 25, 2013 || supercharger added: Rapid City, SD
Mon Nov 25, 2013 || supercharger added: Detroit Lake, OR
Mon Nov 25, 2013 || supercharger added: Oosterhout, Netherlands
Sun Nov 24, 2013 || supercharger added: Mauston, WI
Sun Nov 24, 2013 || supercharger added: Mishawaka, IN
Wed Nov 20, 2013 || supercharger added: Huntsville, TX