@@ -189,7 +189,7 @@ Navigation Bar
                 <th data-sort='string'>Country</th>
                 <th data-sort='string'>GPS Coordinates</th>
                 <th data-sort='string'>Status</th>
-                <th data-sort="date">Open Date</th>
+                <th data-sort="string">Open Date</th>
                 <th>Web Site</th>
             </tr>
             </thead>
