@@ -859,7 +859,7 @@ define(['model/Address', 'util/Asserts', 'util/Objects'], function (Address, Ass
             "address": new Address("P plass bak KIWI Mini Pris", "Dombås", "", "2660", "Norway"),
             "location": new google.maps.LatLng(62.074926, 9.128281),
             "url": "http://www.teslamotors.com/supercharger/dombas",
-            "dateLive": "",
+            "dateLive": "2013-09-28",
             "count": true
         },
         {
@@ -867,7 +867,7 @@ define(['model/Address', 'util/Asserts', 'util/Objects'], function (Address, Ass
             "address": new Address("Korgvegen 37", "Lillehammer", "", "2619", "Norway"),
             "location": new google.maps.LatLng(61.13045, 10.43491),
             "url": "http://www.teslamotors.com/supercharger/lillehammer",
-            "dateLive": "",
+            "dateLive": "2013-09-28",
             "count": true
         },
         {
@@ -875,7 +875,7 @@ define(['model/Address', 'util/Asserts', 'util/Objects'], function (Address, Ass
             "address": new Address("Heradvegen 5", "Gol", "", "3550", "Norway"),
             "location": new google.maps.LatLng(60.70232, 8.98620),
             "url": "http://www.teslamotors.com/supercharger/gol",
-            "dateLive": "",
+            "dateLive": "2013-09-28",
             "count": true
         },
         {
@@ -883,7 +883,7 @@ define(['model/Address', 'util/Asserts', 'util/Objects'], function (Address, Ass
             "address": new Address("Nyheim Aurland", "Aurland", "", "5745", "Norway"),
             "location": new google.maps.LatLng(60.89863, 7.21082),
             "url": "http://www.teslamotors.com/supercharger/aurland",
-            "dateLive": "",
+            "dateLive": "2013-09-28",
             "count": true
         },
         {
@@ -891,7 +891,7 @@ define(['model/Address', 'util/Asserts', 'util/Objects'], function (Address, Ass
             "address": new Address("Gnr 3 Bnr 318 Brokelandsheia", "Sundebru", "", "4993", "Norway"),
             "location": new google.maps.LatLng(58.820783, 9.073746),
             "url": "http://www.teslamotors.com/supercharger/cinderella",
-            "dateLive": "",
+            "dateLive": "2013-09-28",
             "count": true
         },
         {
@@ -899,7 +899,7 @@ define(['model/Address', 'util/Asserts', 'util/Objects'], function (Address, Ass
             "address": new Address("1 Fiboveien", "Lyngdal", "", "4580", "Norway"),
             "location": new google.maps.LatLng(58.15653, 7.10298),
             "url": "http://www.teslamotors.com/supercharger/lyngdal",
-            "dateLive": "",
+            "dateLive": "2013-09-28",
             "count": true
         },
         //-----------------------------------------------------------------------------------------------------------------| SWITZERLAND
@@ -908,7 +908,7 @@ define(['model/Address', 'util/Asserts', 'util/Objects'], function (Address, Ass
             "address": new Address("Restoroute 1470 Lully FR (Autogrill)", "Lully", "", "1470", "Switzerland"),
             "location": new google.maps.LatLng(46.832233, 6.859269),
             "url": "http://www.teslamotors.com/supercharger/lully",
-            "dateLive": "",
+            "dateLive": "2013-12-13",
             "count": true
         }
 
