@@ -32,6 +32,7 @@ Mon Dec 16, 2013 || supercharger added: Santee, SC
 Sat Dec 14, 2013 || supercharger added: Hagerstown, MD
 Fri Dec 13, 2013 || supercharger added: Highland Park, IL
 Fri Dec 13, 2013 || supercharger added: Kingman, AZ
+Fri Dec 13, 2013 || supercharger live:  Lully, Switzerland
 Thu Dec 12, 2013 || supercharger added: Bad Rappenau, Germany
 Thu Dec 12, 2013 || supercharger added: Gallup, NM
 Wed Dec 11, 2013 || supercharger added: Flagstaff, AZ
@@ -62,3 +63,4 @@ Sun Nov 24, 2013 || supercharger added: Mishawaka, IN
 Wed Nov 20, 2013 || supercharger added: Huntsville, TX
 Thu Nov 14, 2013 || supercharger added: Quartzsite, AZ
 Wed Nov 13, 2013 || supercharger added: Corsicana, TX
+Sat Sep 28, 2013 || supercharger live: all six in Norway
